fixed the alignemnt again and again and again

--- a/src/styles/printvue.css
+++ b/src/styles/printvue.css
@@ -37,6 +37,8 @@
   box-sizing: border-box;
   text-align: start;
   margin: 0;
+  top: 0;
+  left: 0;
 }
 
 .topContainer{
@@ -88,6 +90,7 @@
   font-family: Verdana;
   padding: 10px;
   box-sizing: border-box;
+  width: auto;
 }
 
 .incorrect{
@@ -140,6 +143,7 @@
 
    .scroll{
       position: relative;
+      padding: 10px;
       width: 100%;
       height: 250px;
       overflow-y: auto;
